[package]
name = "otoware"
version = "0.1.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
edition = "2018"
publish = false

[dependencies]
cpal = "0.8"
rodio = { version = "0.8", default-features = false }

[patch.crates-io]
cpal = { git = "https://github.com/azyobuzin/cpal.git", branch = "WasapiLoopback" }
rodio = { path = "E:\\repo\\rodio" }
