[package]
name = "otoware"
version = "0.1.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
edition = "2018"
publish = false

[dependencies]
cpal = "0.8"
iui = "0.3"
rodio = { version = "0.8", default-features = false }
ui-sys = "=0.1.3" # libui の内部構造に依存するのでバージョンを固定

[dependencies.winapi]
version = "0.3"
features = ["winuser"]

[patch.crates-io]
cpal = { git = "https://github.com/azyobuzin/cpal.git", branch = "WasapiLoopback" }
